--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>springcloud-api</module>
+        <module>springcloud-provider</module>
+        <module>springcloud-consumer</module>
     </modules>
 
     <!--打包方式
@@ -22,7 +24,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <junit.version>4.1.2</junit.version>
+        <junit.version>4.12</junit.version>
         <lombok.version>1.16.10</lombok.version>
         <log4j.version>1.2.17</log4j.version>
         <logback.version>1.2.7</logback.version>
@@ -48,8 +50,8 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
                 <version>2.1.4.RELEASE</version>
-                <!--<type>pom</type>
-                <scope>import</scope>-->
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
 
             <!--数据库驱动-->
