--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,11 @@
         <module>springcloud-api</module>
         <module>springcloud-provider</module>
         <module>springcloud-consumer</module>
+        <module>springcloud-eureka</module>
+        <module>springcloud-eureka-02</module>
+        <module>springcloud-eureka-03</module>
+        <module>springcloud-provider-02</module>
+        <module>springcloud-provider-03</module>
     </modules>
 
     <!--打包方式
