--- a/springcloud-consumer/src/main/resources/application.yml
+++ b/springcloud-consumer/src/main/resources/application.yml
@@ -4,3 +4,10 @@ server:
 spring:
   application:
     name: springcloud-consumer
+
+#Eureka配置
+eureka:
+  client:
+    register-with-eureka: false   #不向注册中心注册自己
+    service-url:
+      defaultZone: http://localhost:8002/eureka/,http://localhost:8003/eureka/,http://localhost:8004/eureka/
