--- a/springcloud-eureka-02/pom.xml
+++ b/springcloud-eureka-02/pom.xml
@@ -8,7 +8,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <packaging>jar</packaging>
     <artifactId>springcloud-eureka-02</artifactId>
 
     <dependencies>
@@ -18,4 +18,15 @@
             <version>1.4.6.RELEASE</version>
         </dependency>
     </dependencies>
+    <build>
+        <finalName>springcloud-eureka-02</finalName>
+        <plugins>
+            <plugin>
+                <!--该插件主要用途：构建可执行的JAR -->
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+
+            </plugin>
+        </plugins>
+    </build>
 </project>
