--- a/springcloud-eureka-03/pom.xml
+++ b/springcloud-eureka-03/pom.xml
@@ -17,5 +17,32 @@
             <artifactId>spring-cloud-starter-eureka-server</artifactId>
             <version>1.4.6.RELEASE</version>
         </dependency>
+
     </dependencies>
+
+    <build>
+        <finalName>springcloud-eureka-03</finalName>
+        <!--<plugins>
+            <plugin>
+                &lt;!&ndash;该插件主要用途：构建可执行的JAR &ndash;&gt;
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>com.lxf.EurekaServerApplication</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>-->
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
