--- a/springcloud-consumer/src/main/resources/application.yml
+++ b/springcloud-consumer/src/main/resources/application.yml
@@ -11,3 +11,8 @@ eureka:
     register-with-eureka: false   #不向注册中心注册自己
     service-url:
       defaultZone: http://localhost:8002/eureka/,http://localhost:8003/eureka/,http://localhost:8004/eureka/
+feign:
+  hystrix:
+    enabled: true
+
+
