--- a/springcloud-provider-02/pom.xml
+++ b/springcloud-provider-02/pom.xml
@@ -41,6 +41,13 @@
             <artifactId>logback-core</artifactId>
         </dependency>
 
+        <!--hystrix-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-hystrix</artifactId>
+            <version>1.4.6.RELEASE</version>
+        </dependency>
+
         <!--springboot集成mybatis-->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
