--- a/springcloud-provider/pom.xml
+++ b/springcloud-provider/pom.xml
@@ -46,7 +46,12 @@
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
         </dependency>
-
+        <!--hystrix-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-hystrix</artifactId>
+            <version>1.4.6.RELEASE</version>
+        </dependency>
         <!--springboot-test-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
