--- a/springcloud-eureka/pom.xml
+++ b/springcloud-eureka/pom.xml
@@ -17,5 +17,10 @@
             <artifactId>spring-cloud-starter-eureka-server</artifactId>
             <version>1.4.6.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+            <version>2.1.1.RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
