--- a/springcloud-provider/src/main/resources/application.yml
+++ b/springcloud-provider/src/main/resources/application.yml
@@ -1,30 +1,30 @@
-server:
-  port: 8001
-
-mybatis:
-  type-aliases-package: com.bean.*
-  mapper-locations: classpath:mapper/*.xml
-  configuration:
-    map-underscore-to-camel-case: true
-
-
-spring:
-  application:
-    name: springcloud-provider
-  datasource:     #mybatis配置
-    type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/spring_boot?useUnicode=true&characterEncoding=utf-8
-    username: root
-    password: Root123456
-
-#eureka配置
-eureka:
-  client:
-    #单机：defaultZone: http://localhost:8002/eureka/
-    #集群：http://localhost:8002/eureka/,http://localhost:8003/eureka/,http://localhost:8004/eureka/
-    service-url:
-      defaultZone: http://localhost:8002/eureka/,http://localhost:8003/eureka/,http://localhost:8004/eureka/
-  instance:
-    instance-id: provider-hystrix   #修改默认描述信息
-
+#server:
+#  port: 8001
+#
+#mybatis:
+#  type-aliases-package: com.bean.*
+#  mapper-locations: classpath:mapper/*.xml
+#  configuration:
+#    map-underscore-to-camel-case: true
+#
+#
+#spring:
+#  application:
+#    name: springcloud-provider
+#  datasource:     #mybatis配置
+#    type: com.alibaba.druid.pool.DruidDataSource
+#    driver-class-name: com.mysql.jdbc.Driver
+#    url: jdbc:mysql://localhost:3306/spring_boot?useUnicode=true&characterEncoding=utf-8
+#    username: root
+#    password: Root123456
+#
+##eureka配置
+#eureka:
+#  client:
+#    #单机：defaultZone: http://localhost:8002/eureka/
+#    #集群：http://localhost:8002/eureka/,http://localhost:8003/eureka/,http://localhost:8004/eureka/
+#    service-url:
+#      defaultZone: http://localhost:8002/eureka/,http://localhost:8003/eureka/,http://localhost:8004/eureka/
+#  instance:
+#    instance-id: provider-hystrix   #修改默认描述信息
+#
